--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,18 @@ jobs:
           name: Running client tests
           command: npm test
           working_directory: ./client
+  publish-docker:
+    machine: true
+    steps:
+      - checkout
+      - run: echo "$DOCKER_PASS | docker login -u "$DOCKER_USER" --password-stdin
+      - run:
+          name: Docker publish server
+          command: |
+            TAG=0.1$CIRCLE_BUILD_NUM
+            docker build -t wszelig/ASK-server:$TAG .
+            docker push wszelig/ASK-server:$TAG
+          working_directory: ./serer
 workflows:
     build-and-test:
       jobs:
