--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2.1
 orbs:
-  node: circleci/node@1.1.6
+  node: circleci/node@2.1.0
 jobs:
   server-build-and-test:
     executor:
@@ -39,15 +39,15 @@ jobs:
           name: Docker publish server
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
-            docker build -t wszelig/ASK-2-server:$TAG .
-            docker push wszelig/ASK-2-server:$TAG
+            docker build -t wszelig/ask-2-server:$TAG .
+            docker push wszelig/ask-2-server:$TAG
           working_directory: ./server
       - run:
           name: Docker publish client
           command: |
             TAG=0.1.$CIRCLE_BUILD_NUM
-            docker build -t wszelig/ASK-2-client:$TAG .
-            docker push wszelig/ASK-2-client:$TAG
+            docker build -t wszelig/ask-2-client:$TAG .
+            docker push wszelig/ask-2-client:$TAG
           working_directory: ./client
 workflows:
     build-and-test:
